<resources>
    <string name="app_name">Simon Says</string>
    <string name="start_game">Start Game</string>
    <string name="high_score">High Score</string>
    <string name="settings">Settings</string>
    <string name="user">User: </string>
    <string name="score">Score:</string>
    <string name="setting_difficulty">Difficulty: </string>
    <string name="setting_sound">SFX: </string>
    <string name="cpu_turn">CPU Turn</string>
    <string name="player_turn">Player Turn</string>
    <string name="enter_name">Enter your name here</string>
</resources>
