<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenu"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="80dp"
        android:layout_weight="0"
        android:fontFamily="casual"
        android:padding="10dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="52sp"
        android:textStyle="bold"
        android:typeface="serif" />

    <Button
        android:id="@+id/btn_startgame"
        style="@android:style/Widget.Material.Button.Colored"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="40dp"
        android:layout_weight="0"
        android:background="@drawable/rounded_button"
        android:paddingLeft="30dp"
        android:paddingTop="10dp"
        android:paddingRight="30dp"
        android:paddingBottom="10dp"
        android:text="@string/start_game"
        android:textAlignment="center"
        android:textSize="24sp"
        android:visibility="visible" />

    <Button
        android:id="@+id/btn_highscore"
        style="@android:style/Widget.Material.Button.Colored"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="40dp"
        android:layout_weight="0"
        android:background="@drawable/rounded_button"
        android:paddingLeft="30dp"
        android:paddingTop="10dp"
        android:paddingRight="30dp"
        android:paddingBottom="10dp"
        android:text="@string/high_score"
        android:textAlignment="center"
        android:textSize="24sp"
        android:visibility="visible" />

    <Button
        android:id="@+id/btn_settings"
        style="@android:style/Widget.Material.Button.Colored"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="40dp"
        android:layout_weight="0"
        android:background="@drawable/rounded_button"
        android:paddingLeft="30dp"
        android:paddingTop="10dp"
        android:paddingRight="30dp"
        android:paddingBottom="10dp"
        android:text="@string/settings"
        android:textAlignment="center"
        android:textSize="24sp"
        android:visibility="visible" />

</LinearLayout>